Limit input length, show error message when result too big, fix styling issues

--- a/style.css
+++ b/style.css
@@ -8,19 +8,21 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: seven-segment, sans-serif;
+    height: 100vh;
 }
 
 body {
+    background-color: gray;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
+    justify-content: center;
 }
 
 .calculator {
     font-size: 10vmin;
     background-color: rgb(48, 48, 48);
-    padding: 0 .3em;
+    padding: .3em .3em;
     border-radius: .25em;
 }
 
@@ -31,13 +33,13 @@ body {
     font-family: seven-segment;
     background-color: rgb(56, 119, 37);
     border-radius: .25em;
-    margin: .5em 0;
+    margin-bottom: .5em;
 }
 
 .row {
     display: flex;
-    margin: .25em 0;
-    gap: 5px;
+    margin-top: .25em;
+    gap: .1em;
 }
 
 .row > * {
@@ -47,7 +49,7 @@ body {
 button {
     font-size: .8em;
     padding: 0;
-    border: 2px solid black;
+    border: .07em solid black;
     border-radius: .25em;
     background-color: rgb(250, 88, 59);
     color: white;
@@ -57,12 +59,12 @@ button {
 
 button:hover, button:active {
     filter: brightness(70%);
-    transform: translateY(-2px);
+    transform: translateY(-.05em);
 }
 
 .row > div {
     display: flex;
-    gap: 5px;
+    gap: .1em;
 }
 
 .row > div > * {
